# MindNest

./: README.md
bot_code/: api.py  example_api_client.py  example_api_usage.sh  main.py  pyproject.toml  rps_controller.py  start_server.sh  test_api.py  test_imports.py  test_rps.py  test_shake.py  test_smooth.py
chat_simulator/: .gitignore  ENV_SETUP.md  README.md  START_HERE.md  __init__.py  chat_7.txt  chat_simulator.db  create_personas.py  create_personas_api.sh  debug_simulation.py  install.sh  main.py  pyproject.toml  quick_start.sh  run.py
chat_simulator/api/routes/: admin.py  chat.py  global_agent.py  groups.py  personas.py  personas_old.py  simulation.py  views.py
chat_simulator/core/: __init__.py  config.py  queue_manager.py
chat_simulator/database/: connection.py  models.py
chat_simulator/examples/: __init__.py
chat_simulator/models/: group.py  message.py  persona.py  persona_generation.py  simulation.py
chat_simulator/services/: global_agent_service.py  group_service.py  letta_global_agent_service.py  llm_service.py  message_service_db.py  persona_generator.py  persona_service.py  persona_service_db.py  simulation_service.py
chat_simulator/static/: admin_functions.js  app.js  graph_view.js  groups.js  index.html  robot.html  style.css
